# ChangeLog for sys-cluster/gasnet
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gasnet-1.24.0 (01 Mar 2015)

  01 Mar 2015; Christoph Junghans <ottxor@gentoo.org> +gasnet-1.24.0.ebuild,
  +metadata.xml:
  initial commit