@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gasnet-9999 (04 Mar 2015)
+
+  04 Mar 2015; Christoph Junghans <ottxor@gentoo.org> +gasnet-9999.ebuild:
+  added live version
+
 *gasnet-1.24.0 (01 Mar 2015)
 
   01 Mar 2015; Christoph Junghans <ottxor@gentoo.org> +gasnet-1.24.0.ebuild,
